# degradation-aware-uav-fusion

./: .gitignore  README.md  pyproject.toml
docs/: architecture.md  data_contract.md  novelty_plan.md
outputs/: reliability_benchmark.md  reliability_benchmark_all.md  transition_1_navigation_sim.html  transition_2_navigation_sim.html  transition_3_navigation_sim.html
src/sdf_nav/: __init__.py  evaluate.py  filters.py  insane.py  ml_policy.py  policy.py  quality.py  sim.py  train_reliability.py  visualize.py
tests/: test_evaluate.py  test_ml_policy.py  test_policy.py
